--- a/scss/dark/_color-scheme.scss
+++ b/scss/dark/_color-scheme.scss
@@ -1,7 +1,3 @@
 :root {
-  @if $color-scheme == dark {
-    color-scheme: dark light;
-  } @else {
-    color-scheme: light dark;
-  }
+  @include color-scheme-property($default-color-scheme, true);
 }
