--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -1,7 +1,4 @@
-// Variables
-//
-// Variables should follow the `$component-state-property-size` formula for
-// consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
+// Alternate Variables (for use in Dark Mode variant)
 
 // Color system
 // ______________________________________
@@ -77,7 +74,7 @@ $info-alt:          $cyan-alt !default;
 $warning-alt:       $yellow-alt !default;
 $danger-alt:        $red-alt !default;
 $light-alt:         $gray-400-alt !default;
-$dark-alt:          $gray-900-alt !default;  // mix($gray-900-alt, $black-alt, 50%) !default;
+$dark-alt:          $gray-800-alt !default;
 
 $theme-colors-alt: (
   "primary":    $primary-alt,
