--- a/scss/dark/_popover.scss
+++ b/scss/dark/_popover.scss
@@ -12,7 +12,8 @@
   }
 }
 
-.bs-popover-top {
+.bs-popover-top,
+.bs-popover-auto[data-popper-placement^="top"] {  // see note below
   > .popover-arrow {
     &::before {
       border-top-color: $popover-arrow-outer-color-alt;
@@ -24,7 +25,8 @@
   }
 }
 
-.bs-popover-end {
+.bs-popover-end,
+.bs-popover-auto[data-popper-placement^="right"] {  // see note below
   > .popover-arrow {
     &::before {
       border-right-color: $popover-arrow-outer-color-alt;
@@ -36,7 +38,8 @@
   }
 }
 
-.bs-popover-bottom {
+.bs-popover-bottom,
+.bs-popover-auto[data-popper-placement^="bottom"] {  // see note below
   > .popover-arrow {
     &::before {
       border-bottom-color: $popover-arrow-outer-color-alt;
@@ -52,7 +55,8 @@
   }
 }
 
-.bs-popover-start {
+.bs-popover-start,
+.bs-popover-auto[data-popper-placement^="left"] { // see note below
   > .popover-arrow {
     &::before {
       border-left-color: $popover-arrow-outer-color-alt;
@@ -64,21 +68,7 @@
   }
 }
 
-// DON'T REMOVE THIS
-.bs-popover-auto {
-  &[data-popper-placement^="top"] {
-    @extend .bs-popover-top;
-  }
-  &[data-popper-placement^="right"] {
-    @extend .bs-popover-end;
-  }
-  &[data-popper-placement^="bottom"] {
-    @extend .bs-popover-bottom;
-  }
-  &[data-popper-placement^="left"] {
-    @extend .bs-popover-start;
-  }
-}
+// ***NOTE***: Do not use @extend as that would extend the base class and the dark class
 
 // Offset the popover to account for the popover arrow
 .popover-header {
