--- a/scss/dark/_tooltip.scss
+++ b/scss/dark/_tooltip.scss
@@ -5,7 +5,8 @@
   &.show { opacity: $tooltip-opacity-alt; }
 }
 
-.bs-tooltip-top {
+.bs-tooltip-top,
+.bs-tooltip-auto[data-popper-placement^="top"] {
   .tooltip-arrow {
     &::before {
       border-top-color: $tooltip-arrow-color-alt;
@@ -13,7 +14,8 @@
   }
 }
 
-.bs-tooltip-end {
+.bs-tooltip-end,
+.bs-tooltip-auto[data-popper-placement^="right"] {
   .tooltip-arrow {
     &::before {
       border-right-color: $tooltip-arrow-color-alt;
@@ -21,7 +23,8 @@
   }
 }
 
-.bs-tooltip-bottom {
+.bs-tooltip-bottom,
+.bs-tooltip-auto[data-popper-placement^="bottom"] {
   .tooltip-arrow {
     &::before {
       border-bottom-color: $tooltip-arrow-color-alt;
@@ -29,7 +32,8 @@
   }
 }
 
-.bs-tooltip-start {
+.bs-tooltip-start,
+.bs-tooltip-auto[data-popper-placement^="left"] {
   .tooltip-arrow {
     &::before {
       border-left-color: $tooltip-arrow-color-alt;
@@ -37,21 +41,7 @@
   }
 }
 
-// DON'T REMOVE THESE
-.bs-tooltip-auto {
-  &[data-popper-placement^="top"] {
-    @extend .bs-tooltip-top;
-  }
-  &[data-popper-placement^="right"] {
-    @extend .bs-tooltip-end;
-  }
-  &[data-popper-placement^="bottom"] {
-    @extend .bs-tooltip-bottom;
-  }
-  &[data-popper-placement^="left"] {
-    @extend .bs-tooltip-start;
-  }
-}
+// ***NOTE***: Do not use @extend as that would extend the base class and the dark class
 
 // Wrapper for the tooltip content
 .tooltip-inner {
