--- a/examples/cheatsheet-dark.css
+++ b/examples/cheatsheet-dark.css
@@ -93,7 +93,7 @@ body {
   width: 1.25em;
   line-height: 0;
   content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28127,127,127,1%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-  transition: transform .35s ease;
+  /* transition: transform .35s ease; */
   transform-origin: .5em 50%;
 }
 
