nightshade variant and darkmode.js library (#6)
* remove vendor prefix, gets generated anyway

* remove @ extends, as this does not work in nested media queries (extends to base class)

* added nightshade scss

* compiled css

* compiled nightshade css

* added nightfall scss

* compiled nightfall css

* Update index.html

* adding eslint to the project

* getting the hang of this js module thing

* moved css from dist to dist/css

* fixed a few paths from the dist css move

* wip 2021-02-02

* Update README.md

* wip 2021-02-02

* nightshade variant and darkmode.js library ready

* compiled nightshade variant and darkmode.js library

--- a/examples/cheatsheet-nights.css
+++ b/examples/cheatsheet-nights.css
@@ -48,7 +48,6 @@ body {
   border: 0;
 }
 
-
 .bd-aside .btn:hover,
 .bd-aside .btn:focus {
   color: rgba(0, 0, 0, .85);
@@ -59,43 +58,51 @@ body {
   box-shadow: 0 0 0 1px rgba(121, 82, 179, .7);
 }
 
-@media (prefers-color-scheme: dark) {
-  .bd-aside a {
-    color: rgba(255, 255, 255, .65);
-  }
-
-  .bd-aside a:hover,
-  .bd-aside a:focus {
-    color: rgba(255, 255, 255, .85);
-    background-color: rgba(140, 179, 82, .1);
-  }
-
-  .bd-aside .active {
-    color: rgba(255, 255, 255, .85);
-  }
-
-  .bd-aside .btn {
-    color: rgba(255, 255, 255, .65);
-  }
-
-  .bd-aside .btn:hover,
-  .bd-aside .btn:focus {
-    color: rgba(255, 255, 255, .85);
-    background-color: rgba(140, 179, 82, .1);
-  }
-
-  .bd-aside .btn:focus {
-    box-shadow: 0 0 0 1px rgba(140, 179, 82, .7);
-  }
-}
-
 .bd-aside .btn::before {
   width: 1.25em;
   line-height: 0;
   content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28127,127,127,1%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-  /* transition: transform .35s ease; */
+  transition: transform .35s ease;
   transform-origin: .5em 50%;
 }
+
+.color-scheme-dark .bd-aside a,
+html.dark .bd-aside a {
+    color: rgba(255, 255, 255, .65);
+}
+
+.color-scheme-dark .bd-aside a:hover,
+.color-scheme-dark .bd-aside a:focus,
+html.dark .bd-aside a:hover,
+html.dark .bd-aside a:focus {
+    color: rgba(255, 255, 255, .85);
+  background-color: rgba(140, 179, 82, .1);
+}
+
+.color-scheme-dark .bd-aside .active,
+html.dark .bd-aside .active {
+    color: rgba(255, 255, 255, .85);
+}
+
+.color-scheme-dark .bd-aside .btn,
+html.dark .bd-aside .btn {
+    color: rgba(255, 255, 255, .65);
+}
+
+.color-scheme-dark .bd-aside .btn:hover,
+.color-scheme-dark .bd-aside .btn:focus,
+html.dark .bd-aside .btn:hover,
+html.dark .bd-aside .btn:focus {
+    color: rgba(255, 255, 255, .85);
+  background-color: rgba(140, 179, 82, .1);
+}
+
+.color-scheme-dark .bd-aside .btn:focus,
+html.dark .bd-aside .btn:focus {
+    box-shadow: 0 0 0 1px rgba(140, 179, 82, .7);
+}
+
+
 
 .bd-aside .btn[aria-expanded="true"]::before {
   transform: rotate(90deg)/* rtl:ignore */;
@@ -183,10 +190,9 @@ body {
     content: "";
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01));
   }
-  @media (prefers-color-scheme: dark) {
-    .bd-cheatsheet section > h2::before {
-      background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
-    }
+  .color-scheme-dark .bd-cheatsheet section > h2::before,
+  html.dark .bd-cheatsheet section > h2::before {
+    background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
   }
 
   .bd-cheatsheet article,
