bs5b1 bug workarrounds

--- a/examples/cheatsheet-nights.css
+++ b/examples/cheatsheet-nights.css
@@ -215,6 +215,10 @@ html.dark .bd-aside .btn:focus,
   }
 }
 
+.dropdown-item {
+  cursor: pointer;
+}
+
 /* BrowserSync */
 #__bs_notify__ {
   position: fixed;
