--- a/scss/bootstrap-nightfall.scss
+++ b/scss/bootstrap-nightfall.scss
@@ -6,7 +6,7 @@
  *
  * Bootstrap-Nightfall (https://vinorodrigues.github.io/bootstrap-dark-5/)
  * Copyright 2020-2021 Vino Rodrigues
- * This version is an extraction with only the dark elemens, or delta, of the
+ * This version is an extraction with only the dark elements, or deltas, of the
  * dark theme.  Used as a bootstrap plugin.
  */
 
