--- a/scss/dark/_utilities.scss
+++ b/scss/dark/_utilities.scss
@@ -86,7 +86,7 @@ $utilities-alt: map-merge(
         (
           "body": $body-bg-alt,
           "white": $white-alt,
-          "black": $black-alt,
+          "black": $black-alt
         )
       )
     )
