--- a/scss/bootstrap-nightfall.scss
+++ b/scss/bootstrap-nightfall.scss
@@ -1,12 +1,12 @@
 /*!
- * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
+ * Bootstrap v5.0.0-beta2 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  *
  * Bootstrap-Nightfall (https://vinorodrigues.github.io/bootstrap-dark-5/)
  * Copyright 2020-2021 Vino Rodrigues
- * This version is an extraction with only the dark elemens, or delta, of the
+ * This version is an extraction with only the dark elements, or deltas, of the
  * dark theme.  Used as a bootstrap plugin.
  */
 
