--- a/scss/bootstrap-night.scss
+++ b/scss/bootstrap-night.scss
@@ -16,6 +16,7 @@
 @import "dark/variables-map-alt-to-core";  // map the `-alt`'s back to core colors
 @import "mixins";
 @import "utilities";
+@import "dark/patch";  // missing from BS, unsupported patch/hack
 
 // Layout & components
 :root { color-scheme: dark; }  // TODO: this should be code based.
@@ -54,13 +55,6 @@
 
 // Utilities
 @import "utilities/api";
-
-// missing from BS, unsupported patch/hack
-// ---------------------------------------------------------------------------
-.text-black { color: $black if($enable-important-utilities, !important, null); }
-.bg-black { background-color: $black if($enable-important-utilities, !important, null); }
-.border-black { border-color: $black if($enable-important-utilities, !important, null); }
-// ---------------------------------------------------------------------------
 
 // Unique to dark-mode
 @import "dark/dark";
