--- a/scss/bootstrap-blackbox.scss
+++ b/scss/bootstrap-blackbox.scss
@@ -53,6 +53,7 @@
 @import "popover";
 @import "carousel";
 @import "spinners";
+@import "offcanvas";
 
 // Helpers
 @import "helpers";
@@ -94,6 +95,7 @@
   @import "dark/tooltip";
   @import "dark/popover";
   @import "dark/carousel";
+  @import "dark/offcanvas";
 
   // Helpers
   @import "dark/helpers";
