--- a/scss/bootstrap-nightfall.scss
+++ b/scss/bootstrap-nightfall.scss
@@ -47,6 +47,7 @@
 @import "dark/tooltip";
 @import "dark/popover";
 @import "dark/carousel";
+@import "dark/offcanvas";
 
 // Helpers
 @import "dark/helpers";
