--- a/scss/bootstrap-nightshade.scss
+++ b/scss/bootstrap-nightshade.scss
@@ -52,6 +52,7 @@
 @import "popover";
 @import "carousel";
 @import "spinners";
+@import "offcanvas";
 
 // Helpers
 @import "helpers";
@@ -93,6 +94,7 @@
   @import "dark/tooltip";
   @import "dark/popover";
   @import "dark/carousel";
+  @import "dark/offcanvas";
 
   // Helpers
   @import "dark/helpers";
