--- a/scss/bootstrap-unlit.scss
+++ b/scss/bootstrap-unlit.scss
@@ -57,6 +57,7 @@ $default-color-scheme: dark;
 @import "popover";
 @import "carousel";
 @import "spinners";
+@import "offcanvas";
 
 // Helpers
 @import "helpers";
@@ -100,6 +101,7 @@ $default-color-scheme: dark;
   @import "dark/popover";
   @import "dark/carousel";
   // no colors in spinners
+  @import "dark/offcanvas";
 
   // Helpers
   @import "dark/helpers";
