--- a/scss/dark/_accordion.scss
+++ b/scss/dark/_accordion.scss
@@ -33,3 +33,19 @@
   background-color: $accordion-bg-alt;
   border: $accordion-border-width solid $accordion-border-color-alt;
 }
+
+// Flush accordion items
+
+.accordion-flush {
+  .accordion-collapse {
+    border-width: 0;
+  }
+
+  .accordion-item {
+    border-right: 0;
+    border-left: 0;
+
+    &:first-child { border-top: 0; }
+    &:last-child { border-bottom: 0; }
+  }
+}
