--- a/scss/dark/_patch.scss
+++ b/scss/dark/_patch.scss
@@ -3,9 +3,9 @@
 // @see: https://getbootstrap.com/docs/5.0/utilities/api/
 //
 
-@import "../../node_modules/bootstrap/scss/functions";
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/utilities";
+// @import "functions";
+// @import "variables";
+// @import "utilities";
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
