--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -95,6 +95,7 @@ $table-variants-temp-dnu:                              $table-variants;
 // --- Buttons + Forms ---
 $input-btn-focus-color-opacity-temp-dnu:               $input-btn-focus-color-opacity;
 $input-btn-focus-color-temp-dnu:                       $input-btn-focus-color;
+$input-btn-focus-blur-temp-dnu:                        $input-btn-focus-blur;
 $input-btn-focus-box-shadow-temp-dnu:                  $input-btn-focus-box-shadow;
 
 // --- Buttons ---
@@ -390,6 +391,13 @@ $btn-close-focus-opacity-temp-dnu:                     $btn-close-focus-opacity;
 $btn-close-disabled-opacity-temp-dnu:                  $btn-close-disabled-opacity;
 $btn-close-white-filter-temp-dnu:                      $btn-close-white-filter;
 
+// --- Offcanvas ---
+$offcanvas-border-color-temp-dnu:                      $offcanvas-border-color;
+$offcanvas-bg-color-temp-dnu:                          $offcanvas-bg-color;
+$offcanvas-color-temp-dnu:                             $offcanvas-color;
+$offcanvas-body-backdrop-color-temp-dnu:               $offcanvas-body-backdrop-color;
+$offcanvas-box-shadow-temp-dnu:                        $offcanvas-box-shadow;
+
 // --- Code ---
 $code-color-temp-dnu:                                  $code-color;
 $kbd-color-temp-dnu:                                   $kbd-color;
@@ -399,4 +407,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Thu Feb 11 2021 09:30:17 GMT+1100 (Australian Eastern Daylight Time)
+// Generated: Sat Mar 27 2021 08:10:13 GMT+1100 (Australian Eastern Daylight Time)
