--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -95,6 +95,7 @@ $table-variants-alt:                              $table-variants-temp-dnu;
 // --- Buttons + Forms ---
 $input-btn-focus-color-opacity-alt:               $input-btn-focus-color-opacity-temp-dnu;
 $input-btn-focus-color-alt:                       $input-btn-focus-color-temp-dnu;
+$input-btn-focus-blur-alt:                        $input-btn-focus-blur-temp-dnu;
 $input-btn-focus-box-shadow-alt:                  $input-btn-focus-box-shadow-temp-dnu;
 
 // --- Buttons ---
@@ -390,6 +391,13 @@ $btn-close-focus-opacity-alt:                     $btn-close-focus-opacity-temp-
 $btn-close-disabled-opacity-alt:                  $btn-close-disabled-opacity-temp-dnu;
 $btn-close-white-filter-alt:                      $btn-close-white-filter-temp-dnu;
 
+// --- Offcanvas ---
+$offcanvas-border-color-alt:                      $offcanvas-border-color-temp-dnu;
+$offcanvas-bg-color-alt:                          $offcanvas-bg-color-temp-dnu;
+$offcanvas-color-alt:                             $offcanvas-color-temp-dnu;
+$offcanvas-body-backdrop-color-alt:               $offcanvas-body-backdrop-color-temp-dnu;
+$offcanvas-box-shadow-alt:                        $offcanvas-box-shadow-temp-dnu;
+
 // --- Code ---
 $code-color-alt:                                  $code-color-temp-dnu;
 $kbd-color-alt:                                   $kbd-color-temp-dnu;
@@ -399,4 +407,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Thu Feb 11 2021 09:30:17 GMT+1100 (Australian Eastern Daylight Time)
+// Generated: Sat Mar 27 2021 08:10:13 GMT+1100 (Australian Eastern Daylight Time)
